--- a/Buisness.Tests/Assignment.Tests.csproj
+++ b/Buisness.Tests/Assignment.Tests.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Buisness\Buisness.csproj" />
+    <ProjectReference Include="..\AssignmentMain\AssignmentMain.csproj" />
   </ItemGroup>
 
   <ItemGroup>
